Covers .prefooter and .pre-footer classes, needs to be corrected.
See jhu #420

--- a/partials/prefooter.scss
+++ b/partials/prefooter.scss
@@ -1,6 +1,7 @@
 @use '../utils/main' as *;
 
-.prefooter {
+.prefooter,
+.pre-footer {
   background-color: $gray1;
   padding: $standard_spacing 0;
 
